--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<p>Welcome!<p>
+﻿<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <title>John Game Studio</title>
+    <link rel="stylesheet"href="css/1.css">
+</head>
+<body>
+    <h6><a href='主页.html'>返回主站</a></h6>
+    <!-- John logo --!>
+    <p><img src="image/logo.png"alt="John Game Studio"></p>
+    <br/>
+
+    <!-- scratch游戏 --!>
+    <h3><a href="scratch.html">探索好玩的小游戏</a></h3>
+    <h4>游玩使用 Scratch 制作的有着无限乐趣的小游戏！</h4>
+    <br/>
+
+    <!-- 其他页面 --!>
+    <h3>其他页面</h3>
+    <h5><a href="开放源代码.html">开放源代码<br></a></h5>
+    <h5><a href="关于John Game Studio.html">关于 John Game Studio<br></a></h5>
+    <h5><a href="联系开发人员.html">联系开发人员<br></a></h5>
+
+</body>
+</html>
