--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1>Welcome to John Zhang's own website!</h1>
     <p>This is my website. But I don't know what it can do.</p>
+    <a href="https://commongoldingot.github.io/">My friend's website</a>
   </body>
 </html>
