--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html lang="en">
   <head>
     <title>John Zhang</title>
+    <style>
+      body{margin:10px,10px,10px,10px;}
+    </style>
   </head>
   <body>
     <h1>Welcome to John Zhang's own website!</h1>
