--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html lang="en">
   <head>
     <title>John Zhang</title>
-    <style>
-      body{margin:10px,10px,10px,10px;}
-    </style>
   </head>
-  <body>
+  <body style="margin:10px;">
     <h1>Welcome to John Zhang's own website!</h1>
     <p>This is my website. But I don't know what it can do.</p>
     <a href="https://commongoldingot.github.io/">My friend's website</a>
