--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>John Zhang</title>
   </head>
-  <body style="margin:10px;">
+  <body style="margin:30px;background-color:#f8fcff;">
     <h1>Welcome to John Zhang's own website!</h1>
     <p>This is my website. But I don't know what it can do.</p>
     <a href="https://commongoldingot.github.io/">My friend's website</a>
