--- a/404.html
+++ b/404.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Zhang</title>
+    <title>即将到来</title>
     <style>@import"main.css";</style>
     <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
-<body>
-    <h1>John Zhang&thinsp;的小网站</h1>
-    <p>欢迎！开始探索本网站！</p> 
-    <p><a href="404.html">作品</a>&emsp;&emsp;&emsp;&emsp;<a href="404.html">文章</a>&emsp;&emsp;&emsp;&emsp;<a href="about.html">关于</a></p>
+</head>
+<body style="background-color: #e0ffd0">
+    <h1>即将到来</h1>
+    <p>你正在访问的页面即将到来，请耐心等待……</p>
 </body>
 </html>
