--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Zhang</title>
-    <style>@import"main.css";</style>
+    <title>Document</title>
+    <style>@import"main.css"</style>
     <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
+</head>
 <body>
-    <h1>John Zhang&thinsp;的小网站</h1>
-    <p>欢迎！开始探索本网站！</p> 
-    <p><a href="404.html">作品</a>&emsp;&emsp;&emsp;&emsp;<a href="404.html">文章</a>&emsp;&emsp;&emsp;&emsp;<a href="about.html">关于</a></p>
+    <h1>关于</h1>
+    <p>张永康，也就是&thinsp;John Zhang&thinsp;喽</p>
 </body>
 </html>
