--- a/about.html
+++ b/about.html
@@ -12,6 +12,6 @@
     <h1>关于</h1>
     <p>张永康，也就是&thinsp;John Zhang&thinsp;喽</p>
     <h2>友情链接</h2>
-    <p><a href="commongoldingot.github.io">Common Gold Ingot 一个普通的金锭（任浩铭）</a></p>
+    <p><a href="https://CommonGoldIngot.github.io">Common Gold Ingot 一个普通的金锭（任浩铭）</a></p>
 </body>
 </html>
