--- a/passage.html
+++ b/passage.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Zhang</title>
+    <title>文章</title>
     <style>@import"main.css";</style>
     <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
 <body>
-    <h1>John Zhang&thinsp;的小网站</h1>
-    <p>欢迎！开始探索本网站！</p> 
-    <p><a href="404.html">作品</a>&emsp;&emsp;&emsp;&emsp;<a href="passage.html">文章</a>&emsp;&emsp;&emsp;&emsp;<a href="about.html">关于</a></p>
+    <h1>文章</h1>
+    <p><a href="mcl.html">Minecraft&thinsp;启动器推荐</a></p>
 </body>
 </html>
