--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>John Zhang&thinsp;的小网站</h1>
     <p>欢迎！开始探索本网站！</p> 
+    <h2>纪念我们伟大的江泽民同志。</h2>
     <p><a href="404.html">作品</a>&emsp;&emsp;&emsp;&emsp;<a href="passage.html">文章</a>&emsp;&emsp;&emsp;&emsp;<a href="about.html">关于</a></p>
 </body>
 </html>
