--- a/404.html
+++ b/404.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>即将到来</title>
+    <title>404 Not Found</title>
     <style>@import"main.css";</style>
     <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
 </head>
-<body style="background-color: #e0ffd0">
-    <h1>即将到来</h1>
-    <p>你正在访问的页面即将到来，请耐心等待……</p>
+    <h1>404 Not Found</h1>
+    <p>你可能输入了错误的url。\n你要访问的页面可能已被删除或者还没做好。</p>
 </body>
 </html>
