--- a/about.html
+++ b/about.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <h1>关于</h1>
-    <p>张永康，也就是&thinsp;John Zhang&thinsp;喽</p>
+    <p>张永康，英文名 John Zhang，是一个郑州的七年级初中生。</p>
+    <p>喜欢音乐，编程，写文章 :-D</p>
+    <p><del>先写这么多，咕~</del></p>
     <h2>友情链接</h2>
     <p><a href="https://CommonGoldIngot.github.io">Common Gold Ingot 一个普通的金锭（任浩铭）</a></p>
 </body>
