--- a/404.html
+++ b/404.html
@@ -8,7 +8,12 @@
     <style>@import"main.css";</style>
     <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
 </head>
+<body style="background-color: #ffedea">
     <h1>404 Not Found</h1>
-    <p>你可能输入了错误的url。\n你要访问的页面可能已被删除或者还没做好。</p>
+    <p>找不到网页，原因可能是：</p>
+    <li>你输入了错误的网址（URL）。</li>
+    <li>网页曾经存在，但现在已经被删除。</li>
+    <li>网页的内容尚未完成，使用此页面占位。</li>
+    <p><a href="index.html">返回主页</a></p>
 </body>
 </html>
