--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Zhang</title>
+    <title>张永康</title>
     <style>@import"main.css";</style>
     <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
 <body>
     <h1>John Zhang&thinsp;的小网站</h1>
     <p>欢迎！开始探索本网站！</p> 
-    <h2>纪念我们伟大的江泽民同志。</h2>
-    <p><a href="404.html">作品</a>&emsp;&emsp;&emsp;&emsp;<a href="passage.html">文章</a>&emsp;&emsp;&emsp;&emsp;<a href="about.html">关于</a></p>
+    <p><a href="passage.html">文章</a>&emsp;&emsp;&emsp;&emsp;<a href="about.html">关于</a></p>
+    <h2>推荐阅读</h2>
+    <p><a href="star.html">照我前行的那颗星</a></p>
+    <p><a href="voice.html">天赐之声</a></p>
 </body>
 </html>
