--- a/passage.html
+++ b/passage.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
 <body>
     <h1>文章</h1>
-    <p><a href="mcl.html">Minecraft&thinsp;启动器推荐</a></p>
+    <li><a style="color: #006e2f;" href="star.html"><b>【推荐阅读】照我前行的那颗星</b></a></li>
+    <li><a href="voice.html">天赐之声</a></li>
 </body>
 </html>
