--- a/star.html
+++ b/star.html
@@ -7,7 +7,7 @@
     <title>照我前行的那颗星</title>
     <style>@import"main.css";</style>
     <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
-<body style="margin: 30px 200px 30px 200px;">
+<body>
     <h1>照我前行的那颗星</h1>
     <p>“立正！敬礼！”随着这铿锵有力的号令响起，慷慨激昂的国歌在校园回荡，五星红旗就像那黎明的红日冉冉升起，五颗金黄的五角星在大红色背景的衬托下，显得格外鲜艳而明亮。我的目光坚定有力地射向最大的那颗星，那颗代表着中国共产党的明星，正是照我前行的那颗星！</p>
     <hr/>
