--- a/voice.html
+++ b/voice.html
@@ -7,8 +7,7 @@
     <title>天赐之声</title>
     <style>@import"main.css";</style>
     <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
-<body style="margin: 30px 200px 30px 200px;">
-    <h1>天赐之声</h1>
+<body>
     <p>朋友，你是否曾摘下吵闹的耳机，聆听大自然的优美旋律？朋友，你是否曾抛下烦闷的心绪，感受大自然的幽静？当你真正将自己沉浸在大自然之中时，你会感叹，天赐之声，无与伦比。</p>
     <p>夏日的晚八点，天空还未暗得透彻，隐隐约约地透过暗蓝色的微光。星空是那么明朗，恒星如精心雕刻的钻石，镶嵌在深蓝的巨幕之上。我孤自走在公园的小道上，心中还充斥着考试失利的烦闷。</p>
     <p>听，那是什么声音？“咕噜呱，咕噜呱……”我从未听过这种特别的声音，它好似人打鼾，却又像摇起来的拨浪鼓。我好奇地向河边凑过去，只见有像泡泡一鼓一鼓的东西——那不是青蛙吗？青蛙之声，古今中外之书皆以“呱”字代之，而其真声，却今日才相识。我继续向前走，那“咕噜呱”声却越来越响亮了，想必是青蛙们在开会吧。</p>
