--- a/404.html
+++ b/404.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Not Found</title>
-    <style>@import"main.css";</style>
-    <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
+    <style>
+    @import"main.css"; 
+    @import"404.css";
+    </style>
+    <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
 </head>
-<body style="background-color: #ffedea">
+<body>
     <h1>404 Not Found</h1>
+    <div>
     <p>找不到网页，原因可能是：</p>
     <li>你输入了错误的网址（URL）。</li>
     <li>网页曾经存在，但现在已经被删除。</li>
     <li>网页的内容尚未完成，使用此页面占位。</li>
-    <p><a href="index.html">返回主页</a></p>
+    <p><a href="index.html"><button>返回主页</button></a></p>
+    </div>
 </body>
 </html>
