--- a/passage.html
+++ b/passage.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>文章</title>
     <style>@import"main.css";</style>
-    <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
+    <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
 <body>
     <h1>文章</h1>
-    <li><a style="color: #006e2f;" href="star.html"><b>【推荐阅读】照我前行的那颗星</b></a></li>
+    <li><a href="star.html"><b>【推荐阅读】照我前行的那颗星</b></a></li>
     <li><a href="voice.html">天赐之声</a></li>
 </body>
 </html>
