--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>关于</title>
     <style>@import"main.css"</style>
-    <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
+    <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
 </head>
 <body>
     <h1>关于</h1>
