--- a/about.html
+++ b/about.html
@@ -15,5 +15,7 @@
     <p><del>先写这么多，咕~</del></p>
     <h2>友情链接</h2>
     <p><a href="https://CommonGoldIngot.github.io">Common Gold Ingot 一个普通的金锭（任浩铭）</a></p>
+    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="10%" height="10%"></a></p>
+
 </body>
 </html>
