--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         <p><a href="star.html">照我前行的那颗星</a></p>
         <p><a href="voice.html">天赐之声</a></p>
     </div>
+    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="10%" height="10%"></a></p>
 </body>
 </html>
