--- a/star.html
+++ b/star.html
@@ -31,7 +31,9 @@
     <div>
     <p>霎时间，我想到了一句名言：“为中华之崛起而读书！”引领我读书的，不正是照我前行的那颗星吗？我相信那颗代表着中国共产党的星，能引领着我，穿过未知的黑暗，而那黑暗过后，必将是中华民族伟大复兴所带来的一片光明。</p>
     </div>
-    <p style="font-size: 14; color:#808080;">本文为张永康的原创文章。本文同时发表于<a href="https://mp.weixin.qq.com/s/omi4uoh0yl5aP1x8gZMf0w">微信公众号</a>中。<del>我的排版水平怎么那么差……</del></p>
+    <p class="infor">本文为张永康的原创文章。本文同时发表于<a href="https://mp.weixin.qq.com/s/omi4uoh0yl5aP1x8gZMf0w">微信公众号</a>中。<del>我的排版水平怎么那么差……</del></p>
+    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="10%" height="10%"></a></p>
+
 </p>
 </body>
 </html>
