--- a/voice.html
+++ b/voice.html
@@ -20,6 +20,8 @@
     <p>朋友，这就是自然的声音，这就是世界原有的声音。让我们走出喧嚣，远离繁忙，拥抱自然，去聆听这优美的天赐之声。</p>
     </div>
     <p class="infor">本文为张永康的原创文章。</p>
+    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="10%" height="10%"></a></p>
+
 </p>
 </body>
 </html>
