--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
     <li>网页的内容尚未完成，使用此页面占位。</li>
     <p><a href="index.html"><button>返回主页</button></a></p>
     </div>
-    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="10%" height="10%"></a></p>
+    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="100px" height="10%"></a></p>
 
 </body>
 </html>
