--- a/mcl.html
+++ b/mcl.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft 启动器推荐</title>
-    <style>@import"main.css";</style>
+    <style>@import"main.css";
+    @import"secret.css";</style>
     <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
 <body>
 
     <h1>Minecraft&thinsp;启动器推荐</h1>
     <p>由&thinsp;<a href="https://commongoldingot.github.io">CommonGoldIngot</a>&thinsp;整理</p>
+    <div>
     <h2>手机版</h2>
-    </ul>
+    <ul>
     <li><a href="https://mcinabox.vercel.app">MCinaBox</a></li>
     <li><a href="https://github.com/AOF-Dev/MCinaBox">MCinaBox_github</a></li>
     <li><a href="https://github.com/PojavLauncherTeam/PojavLauncher">PojavLauncher_github</a></li>
@@ -22,8 +24,11 @@
     <li><a href="https://space.bilibili.com/197522141">EmojiME_Bilibili</a></li>
     <li><a href="https://space.bilibili.com/269765351">SHI_9_Bilibili</a></li>
     <li><a href="https://github.com/Tungstend/Lava_Boat_Files">Lava-Boat_github</a></li>
-    <h2>电脑版</h2>
     </ul>
+    </div>
+    <div>
+    <h2>电脑版</h2>
+    <ul>
     <li><a href="https://hmcl.huangyuhui.net">HMCL</a></li>
     <li><a href="http://ci.huangyuhui.net/job/HMCL">HMCL_JenkinsCI</a></li>
     <li><a href="https://github.com/huanghongxun/HMCL">HMCL_github</a></li>
@@ -31,6 +36,8 @@
     <li><a href="https://www.bakaxl.com">BakaXL</a></li>
     <li><a href="https://multimc.org">MultiMC</a></li>
     <li><a href="https://betacraft.uk">betacraft</a></li>
+    </ul>
+    </div>
 
 </body>
 </html>
