--- a/passage.html
+++ b/passage.html
@@ -11,7 +11,7 @@
     <h1>文章</h1>
     <li><a href="star.html"><b>【推荐阅读】照我前行的那颗星</b></a></li>
     <li><a href="voice.html">天赐之声</a></li>
-    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="10%" height="10%"></a></p>
+    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="100px" height="10%"></a></p>
 
 </body>
 </html>
