--- a/joke.html
+++ b/joke.html
@@ -12,17 +12,16 @@
     <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
 </head>
 <body>
-    <h1>秘密页</h1>
+    <h1>二营笑话</h1>
     <div>
-    <p>欢迎来到只有 John Zhang 指定的人员才能到达的秘密页！</p>
-    <p>如果 John Zhang 从来没有指派你到达此网页，或者你通过翻源代码等方式意外进入此页面，请立即离开，否则后果自负。</p>
-    <p>来探索这些神秘的网页！</p>
-    </div>
-    <div>
-        <ul>
-            <li><a href="mcl.html">Minecraft 启动器推荐</a></li>
-            <li><a href="joke.html">二营笑话</a></li>
-        </ul>
+    <h2>微信群里的10种人</h2>
+    <p>众所周知，二营总部微信群里有10种人：</p>
+    <ul>
+        <li>一种是玩烂梗的，</li>
+        <li>一种是讨论技术问题的，</li>
+        <li>一种是在怀疑为什么是10种的。</li>
+    </ul>
+    <p>提问：这是几进制？</p>
     </div>
     <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/639695feb1fccdcd36b77c6e.png" class="logo" width="100px" height="10%" alt="返回首页"></a></p>
 
