--- a/mcl.html
+++ b/mcl.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cn">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,8 @@
     <title>Minecraft 启动器推荐</title>
     <style>@import"main.css";
     @import"secret.css";</style>
-    <link href="https://fonts.font.im/css?family=Noto+Sans|Noto+Serif" rel="stylesheet"></head>
-<body>
+    <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+    <body>
 
     <h1>Minecraft&thinsp;启动器推荐</h1>
     <p>由&thinsp;<a href="https://commongoldingot.github.io">CommonGoldIngot</a>&thinsp;整理</p>
@@ -38,6 +38,7 @@
     <li><a href="https://betacraft.uk">betacraft</a></li>
     </ul>
     </div>
+    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/639695feb1fccdcd36b77c6e.png" class="logo" width="100px" height="10%" alt="返回首页"></a></p>
 
 </body>
 </html>
