--- a/passage.html
+++ b/passage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cn">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
     <h1>文章</h1>
     <li><a href="star.html"><b>【推荐阅读】照我前行的那颗星</b></a></li>
     <li><a href="voice.html">天赐之声</a></li>
-    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="100px" height="10%"></a></p>
+    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="100px" height="10%" alt="返回首页"></a></p>
 
 </body>
 </html>
