--- a/star.html
+++ b/star.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cn">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,7 +32,7 @@
     <p>霎时间，我想到了一句名言：“为中华之崛起而读书！”引领我读书的，不正是照我前行的那颗星吗？我相信那颗代表着中国共产党的星，能引领着我，穿过未知的黑暗，而那黑暗过后，必将是中华民族伟大复兴所带来的一片光明。</p>
     </div>
     <p class="infor">本文为张永康的原创文章。本文同时发表于<a href="https://mp.weixin.qq.com/s/omi4uoh0yl5aP1x8gZMf0w">微信公众号</a>中。<del>我的排版水平怎么那么差……</del></p>
-    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="100px" height="10%"></a></p>
+    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="100px" height="10%" alt="返回首页"></a></p>
 
 </p>
 </body>
