--- a/party.html
+++ b/party.html
@@ -7,23 +7,16 @@
     <title>张永康</title>
     <style>
         @import"main.css";
-        
+        @import"404.css";
     </style>
     <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
 <body>
-    <h1>John Zhang&thinsp;的小网站</h1>
+    <h1>2023&thinsp;年元旦晚会</h1>
+    <p>用联欢晚会欢送2022，迎接2023！</p>
     <div>
-        <p>欢迎！开始探索本网站！</p> 
-        <p><a href="passage.html"><button>文章</button></a>&emsp;&emsp;&emsp;&emsp;<a href="about.html">关于</a></p>
-    </div>
-    <div>
-        <p>七（10）班2023元旦晚会即将开始！<p>
-        <p><a href="party.html"><button>查看更多</button></a></p>
-    </div>
-    <div>    
-        <h2>推荐阅读</h2>
-        <p><a href="star.html">照我前行的那颗星</a></p>
-        <p><a href="voice.html">天赐之声</a></p>
+        <h2>如何参加？</h2> 
+        <p><b>如果你是七（10）班的师生</b>，只需要在202<del>2</del>3年1月1日下午3时进入视频会议，参加联欢会。</b></p>
+        <p><b>如果你不是七（10）班的师生</b>，我们可能会在联欢会结束后在网站上推出完整回放或片段，欢迎收看。</p>
     </div>
     <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="100px" height="10%" alt="返回首页" title="返回首页"></a></p>
 </body>
