Delete the party, add a tip about how to browse it
Watt Toolkit

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <p>欢迎！开始探索本网站！</p> 
         <p><a href="passage.html"><button>文章</button></a>&emsp;&emsp;&emsp;&emsp;<a href="about.html">关于</a></p>
     </div>
-    <div>
-        <p>七（10）班2023元旦晚会即将开始！<p>
-        <p><a href="party.html"><button>查看更多</button></a></p>
-    </div>
     <div>    
         <h2>推荐阅读</h2>
         <p><a href="star.html">照我前行的那颗星</a></p>
         <p><a href="voice.html">天赐之声</a></p>
+    </div>
+    <div>    
+        <h2注意事项</h2>
+        <p>如果无法流畅浏览此页面，推荐使用 Watt Tookit 加速。<a href="https://steampp.net">下载链接</a></p>
     </div>
     <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="100px" height="10%" alt="返回首页" title="返回首页"></a></p>
 </body>
