--- a/kind1/rebuildWebsite.html
+++ b/kind1/rebuildWebsite.html
@@ -61,7 +61,7 @@
         </div>
 
         <h3>开始编写</h3>
-        <p>准备工作完成，接下来就该编写网站了。这个过程比较枯燥：编辑器里写一点，<kbd>Crtl</kbd> + <kbd>S</kbd> 一下，然后再切换到浏览器，<kbd>F5</kbd> 一下……最后就写好了（其实还没有写好）。</p>
+        <p>准备工作完成，接下来就该编写网站了。这个过程比较枯燥：编辑器里写一点，<kbd>Ctrl</kbd> + <kbd>S</kbd> 一下，然后再切换到浏览器，<kbd>F5</kbd> 一下……最后就写好了（其实还没有写好）。</p>
         <!--正文结束-->
         <br />
         <p class="text-secondary">张永康，2023 年 7 月 26 日。</p>
