--- a/404.html
+++ b/404.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <link href="bootstrap5/bootstrap.min.css" rel="stylesheet">
+    <link href="https://github.com/JohnZhang888/johnzhang888.github.io/bootstrap5/bootstrap.min.css" rel="stylesheet">
     <!--不要忘记更换这里的路径！-->
-    <link href="styles/main.css" rel="stylesheet">
+    <link href="https://github.com/JohnZhang888/johnzhang888.github.io/styles/main.css" rel="stylesheet">
     <title>404 Not Found</title>
     <link rel="shortcut icon" type="image/x-icon" href="logo/shortcut.png"></link>
 </head>
@@ -37,7 +37,7 @@
     </div>
 
     <!--不要忘记更换这里的路径！-->
-    <script src="bootstrap5/bootstrap.bundle.min.js"></script>
+    <script src="https://github.com/JohnZhang888/johnzhang888.github.io/bootstrap5/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
