Tools and Games Update

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
         <div class="card bg-primary text-white">
             <div class="card-body">
                 <h1 class="card-title">欢迎来访 John 的网站！</h1>
-                <p class="card-text">尚未确定的，富含哲理的，高大上的，<del>不知所云的</del> Slogan。</p>
+                <p class="card-text"><ruby>人<rt>任</rt></ruby>不犯我，我不犯<ruby>人<rt>任</rt>；<ruby>人<rt>任</rt>若犯我，我必犯<ruby>人<rt>任</rt>。<del>就是告诉你，不要轻易尝试攻击我的网站啦:)</del></p>
             </div>
         </div>
         <br />
         <div class="card">
             <div class="card-body">
-                <h6 class="card-title text-primary"><i class="bi bi-stars"></i> <strong>最新文章</strong></h6>
-                <h2>网站重建记</h2>
-                <p class="card-text">记录我重新搭建本网站的过程。</p>
-                <a class="btn btn-primary" href="kind1/rebuildWebsite.html">阅读</a>
+                <h6 class="card-title text-primary"><i class="bi bi-stars"></i> <strong>最新页面</strong></h6>
+                <h2>XYes</h2>
+                <p class="card-text">一个二元一次方程组求解器。</p>
+                <a class="btn btn-primary" href="tools-and-games/XYes.html">使用</a>
             </div>
         </div>
         <br />
@@ -65,13 +65,14 @@
                 <div class="card">
                     <div class="card-body">
                         <h2 class="card-title">工具与游戏</h2>
-                        <p class="card-text">尚未建成，敬请期待。</p>
-                        <a class="btn btn-outline-secondary btn-sm disabled">敬请期待</a>
+                        <p class="card-text">一些实际上不好用的工具和（可能会有的）无聊的游戏。</p>
+                        <a class="btn btn-outline-secondary btn-sm" href="tools-and-games/index.html">浏览</a>
                     </div>
                 </div>
             </div>
         </div>
         <br/>
+        <p>友情链接：任浩铭的网站——<a href="commongoldingot.github.io">Common Gold Ingot</a>。</p>
     </div>
 
     <script src="bootstrap5/bootstrap.bundle.min.js"></script>
