--- a/tools-and-games/index.html
+++ b/tools-and-games/index.html
@@ -24,14 +24,14 @@
     <br />
     
     <div class="container">
-        <h1>随写随记</h1>
+        <h1>工具与游戏</h1>
         <br>
         <div class="row gy-2">
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
-                        <a href="rebuildWebsite.html"><h4 class="text-primary">网站重建记</h4></a>
-                        <span class="text-muted">记录我重新搭建本网站的过程。</span>
+                        <a href="XYes.html"><h4 class="text-primary">XYes</h4></a>
+                        <span class="text-muted">一个二元一次方程组求解器。</span>
                     </div>
                 </div>
             </div>
