--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="card bg-primary text-white">
             <div class="card-body">
                 <h1 class="card-title">欢迎来访 John 的网站！</h1>
-                <p class="card-text"><ruby>人<rt>任</rt></ruby>不犯我，我不犯<ruby>人<rt>任</rt></ruby>;<ruby>人<rt>任</rt></ruby>若犯我，我必犯<ruby>人<rt>任</rt></ruby>。<del>就是告诉你，不要轻易尝试攻击我的网站啦:)</del></p>
+                <p class="card-text"><ruby>人<rt>任</rt></ruby>不犯我，我不犯<ruby>人<rt>任</rt></ruby>；<ruby>人<rt>任</rt></ruby>若犯我，我必犯<ruby>人<rt>任</rt></ruby>。<del>就是告诉你，不要轻易尝试攻击我的网站啦 :)</del></p>
             </div>
         </div>
         <br />
