--- a/404.html
+++ b/404.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <link href="https://github.com/JohnZhang888/johnzhang888.github.io/bootstrap5/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap5/bootstrap.min.css" rel="stylesheet">
     <!--不要忘记更换这里的路径！-->
-    <link href="https://github.com/JohnZhang888/johnzhang888.github.io/styles/main.css" rel="stylesheet">
+    <link href="styles/main.css" rel="stylesheet">
     <title>404 Not Found</title>
     <link rel="shortcut icon" type="image/x-icon" href="logo/shortcut.png"></link>
 </head>
 
-<body class="bg-danger text-white">
+<body class="bg-danger-secondary">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
@@ -33,7 +33,7 @@
         <li>网页曾经存在，但现在已经被删除。</li>
         <li>网页的内容尚未完成，使用此页面占位。</li>
         <br />
-        <a class="btn btn-light text-danger" href="index.html">返回主页</a>
+        <a class="btn btn-danger" href="index.html">返回主页</a>
     </div>
 
     <!--不要忘记更换这里的路径！-->
