--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div class="card">
             <div class="card-body">
                 <h6 class="card-title text-primary"><i class="bi bi-stars"></i> <strong>最新页面</strong></h6>
-                <h2>XYes</h2>
-                <p class="card-text">一个二元一次方程组求解器。</p>
-                <a class="btn btn-primary" href="tools-and-games/XYes.html">使用</a>
+                <h2>春到回初</h2>
+                <p class="card-text">春暖花开，万物复苏。</p>
+                <a class="btn btn-primary" href="kind2/spring.html">阅读</a>
             </div>
         </div>
         <br />
