--- a/kind2/index.html
+++ b/kind2/index.html
@@ -29,6 +29,7 @@
         <ul>
             <li><a href="voice.html"><sapn class="text-primary">天赐之声</span></a></li>
             <li><a href="star.html"><span class="text-primary">照我前行的一颗星</span></a></li>
+            <li><a href="spring.html"><span class="text-primary">春到回初</span></a></li>
         </ul>
 
     </div>
