--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="logo/shortcut.png"></link>
 </head>
 
-<body class="bg-danger-secondary">
+<body class="bg-danger" style="--bs-bg-opacity: .075">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
