Bug truly fixed on 404.html

--- a/404.html
+++ b/404.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <link href="bootstrap5/bootstrap.min.css" rel="stylesheet">
+    <link href="https://johnzhang888.github.io/bootstrap5/bootstrap.min.css" rel="stylesheet">
     <!--不要忘记更换这里的路径！-->
-    <link href="styles/main.css" rel="stylesheet">
+    <link href="https://johnzhang888.github.io/styles/main.css" rel="stylesheet">
     <title>404 Not Found</title>
-    <link rel="shortcut icon" type="image/x-icon" href="logo/shortcut.png"></link>
+    <link rel="shortcut icon" type="image/x-icon" href="https://johnzhang888.github.io/logo/shortcut.png"></link>
 </head>
 
 <body class="bg-danger" style="--bs-bg-opacity: .075">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-            <a class="btn btn-link" href="about/index.html">关于</a>
-            <a href="../index.html" class="navbar-brand logo"><b>John</a></b>
+            <a class="btn btn-link" href="https://johnzhang888.github.io/about/index.html">关于</a>
+            <a href="https://johnzhang888.github.io/index.html" class="navbar-brand logo"><b>John</a></b>
             <a class="btn btn-link">English</a>
         </div>
     </nav>  
@@ -37,7 +37,7 @@
     </div>
 
     <!--不要忘记更换这里的路径！-->
-    <script src="https://github.com/JohnZhang888/johnzhang888.github.io/bootstrap5/bootstrap.bundle.min.js"></script>
+    <script src="https://johnzhang888.github.io/sbootstrap5/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
