--- a/kind2/star.html
+++ b/kind2/star.html
@@ -27,9 +27,32 @@
     <div class="container">
         <h6 class="text-primary"><a href="index.html"><b>正经文摘</b></a></h6>
         <h1>照我前行的一颗星</h1>
-        <div class="card bg-info">
+        <br>
+        <div class="card bg-danger text-white">
             <div class="card-body">
-                <i class="bi bi-info-circle-fill"></i><span> 根据相关法律法规要求，本网站使用的托管服务不允许上传此类文章。请前往<a class="link" href="https://mp.weixin.qq.com/s/omi4uoh0yl5aP1x8gZMf0w" style="color:black;">微信公众号</a>阅读原文。</span>
+                <h3 class="card-title"><i class="bi bi-exclamation-triangle-fill"></i> 免责声明</h3>
+                <p class="card-text">本文涉及政治敏感内容，可能包含与读者想法不同的观点。若您感到不适，请离开本页面，不要上纲上线。</p>
+            </div>
+        </div>
+        <br>
+        <div class="card px-2">
+            <div class="card-body">
+                <p class="card-text"> “立正！敬礼！”随着这铿锵有力的号令响起，慷慨激昂的国歌在校园回荡，五星红旗就像那黎明的红日冉冉升起，五颗金黄的五角星在大红色背景的衬托下，显得格外鲜艳而明亮。我的目光坚定有力地射向最大的那颗星，那颗代表着中国共产党的明星，正是照我前行的那颗星！</p>
+                <hr>
+                <p class="card-text"> 我和共产党的初次“邂逅”，从一次看新闻联播开始。那年南方下了暴雨，发生了洪灾。主播说：“在此汛情期间，中国共产党人奋勇拼搏、迎难而上、砥砺奋进……”</p>
+                <p class="card-text">还在上幼儿园的我听得一头雾水，疑惑地问身旁的奶奶：“奶奶‘共产党’是什么意思？”奶奶把我搂在温暖的怀里，向我投来亲切而深情的目光“共产党啊，就是一群处处为人民着想的人，他们不论做什么事，都是为了人民，为了我们。”</p>
+                <p class="card-text">“那他们到底做什么呢？”</p>
+                <p class="card-text">“救死扶伤、打败敌人，给穷人东西吃、衣服穿……人民让他们干什么，他们就能干什么。”</p>
+                <p class="card-text">“那真酷！”我小小的心灵里，已经悄然埋下了为人民服务的种子。</p>
+                <hr>
+                <p class="card-text">后来，我上了小学一年级。幸运的是，我被选为了第一批少先队员。老师深情地对我们说：</p>
+                <p class="card-text">“想不想当共产党员？”</p>
+                <p class="card-text">“想！”我们异口同声地说。</p>
+                <p class="card-text">“想加入共产党，就得先加入少先队。你们已经是共产党的预备队了。你们的任务就是努力学习，将来成为一名真正光荣的中国共产党员！”望着胸前鲜艳的红领巾，再望向国旗上最大的那颗星，我的心中充满了前进的力量。从那时起，我就在那颗星的照耀下努力学习。</p>
+                <hr>
+                <p class="card-text">当我进入初中，课程表上又多了一门道德与法治课。第一节课，道德与法治老师就跟我们说：“看到国旗上那颗大星了吗？我们就要在它的照耀下砥砺前行。我们要实现中华民族伟大复兴的中国梦！”然后他又给我们讲了中国共产党员、优秀村干部黄文秀大学毕业后毅然回到贫穷的家乡脱贫攻坚，为实现中华民族伟大复兴的中国梦努力奋斗，最后以身殉职的故事。</p>
+                <hr>
+                <p class="card-text">霎时间，我想到了一句名言：“为中华之崛起而读书！”引领我读书的，不正是照我前行的那颗星吗？我相信那颗代表着中国共产党的星，能引领着我，穿过未知的黑暗，而那黑暗过后，必将是中华民族伟大复兴所带来的一片光明。</p>
             </div>
         </div>
         <br />
