--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zh-CN" data-bs-theme="light">
+<html lang="zh-CN" data-bs-theme="light" id="html">
 
 <head>
     <meta charset="utf-8">
@@ -9,7 +9,8 @@
     <link href="bootstrap5/bootstrap.min.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
-    <link rel="shortcut icon" type="image/x-icon" href="logo/shortcut.png"></link>
+    <link rel="shortcut icon" type="image/x-icon" href="logo/shortcut.png">
+    </link>
     <title>John 的网站</title>
 </head>
 
@@ -19,17 +20,21 @@
         <div class="container">
             <a class="btn btn-link" href="about/index.html">关于</a>
             <a href="index.html" class="navbar-brand logo"><b>John</a></b>
-            <a href="index-en.html"class="btn btn-link">English</a>
+            <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-outline-primary btn-sm" onclick="lightTheme()"><i class="bi bi-brightness-high-fill"></i></button>
+                <button type="button" class="btn btn-outline-primary btn-sm" onclick="darkTheme()"><i class="bi bi-moon-stars-fill"></i></button>
+            </div>        
         </div>
     </nav>
     <br />
 
     <div class="container">
-        <br/>
-        <div class="card bg-primary text-white">
+        <br />
+        <div class="card">
             <div class="card-body">
                 <h1 class="card-title">欢迎来访 John 的网站！</h1>
-                <p class="card-text"><ruby>人<rt>任</rt></ruby>不犯我，我不犯<ruby>人<rt>任</rt></ruby>；<ruby>人<rt>任</rt></ruby>若犯我，我必犯<ruby>人<rt>任</rt></ruby>。<del>就是告诉你，不要轻易尝试攻击我的网站啦 :)</del></p>
+                <p class="card-text"><ruby>人<rt>任</rt></ruby>不犯我，我不犯<ruby>人<rt>任</rt></ruby>；<ruby>人<rt>任</rt>
+                        </ruby>若犯我，我必犯<ruby>人<rt>任</rt></ruby>。<del>就是告诉你，不要轻易尝试攻击我的网站啦 :)</del></p>
             </div>
         </div>
         <br />
@@ -71,11 +76,12 @@
                 </div>
             </div>
         </div>
-        <br/>
+        <br />
         <p>友情链接：任浩铭的网站——<a href="https://commongoldingot.github.io">Common Gold Ingot</a>。</p>
     </div>
 
     <script src="bootstrap5/bootstrap.bundle.min.js"></script>
+    <script src="script/main.js"></script>
 </body>
 
 </html>
