--- a/kind2/star.html
+++ b/kind2/star.html
@@ -19,7 +19,10 @@
         <div class="container">
             <a class="btn btn-link" href="../about/index.html">关于</a>
             <a href="../index.html" class="navbar-brand logo"><b>John</a></b>
-            <a class="btn btn-link">English</a>
+            <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-outline-primary btn-sm" onclick="lightTheme()"><i class="bi bi-brightness-high-fill"></i></button>
+                <button type="button" class="btn btn-outline-primary btn-sm" onclick="darkTheme()"><i class="bi bi-moon-stars-fill"></i></button>
+            </div>
         </div>
     </nav>  
     <br />
